Archive2/2a/dfafbcdf358e0f/output
main.cpp:25:12: error: 'unique_ptr' was not declared in this scope
     vector<unique_ptr<string>> m_values;
            ^
main.cpp:25:23: error: template argument 1 is invalid
     vector<unique_ptr<string>> m_values;
                       ^
main.cpp:25:23: error: template argument 2 is invalid
main.cpp:25:29: error: expected unqualified-id before '>' token
     vector<unique_ptr<string>> m_values;
                             ^
main.cpp:26:1: error: expected ';' after struct definition
 }
 ^
main.cpp: In constructor 'A::A()':
main.cpp:20:11: error: class 'A' does not have any field named 'm_values'
     A() : m_values()
           ^
